--- a/force-app/main/default/classes/TravelVendorPanelRemote.cls
+++ b/force-app/main/default/classes/TravelVendorPanelRemote.cls
@@ -122,12 +122,12 @@ public with sharing class TravelVendorPanelRemote {
         try {
             if (settings != null && !settings.isEmpty()) {
                 for (TravelVendorSettings__c vendorSetting : settings) {
-                    if (vendorSetting.isEnable__c) {
+//                    if (vendorSetting.isEnable__c) {
                         travelVendorSettings.add(vendorSetting);
                         if (vendorSetting.Id != null) {
                             travelVendorSettingsIds.add(vendorSetting.Id);
                         }
-                    }
+//                    }
                 }
             }
             supportHelper.deleteTravelSettings(ctpId, travelVendorSettingsIds);
