--- a/force-app/main/default/classes/EmailTemplateController.cls
+++ b/force-app/main/default/classes/EmailTemplateController.cls
@@ -42,6 +42,11 @@ global without sharing class EmailTemplateController {
     global String emailParametersProvider {get; set;}
     global Id sourceRecordId {get; set;}
     global Boolean replaceLineBreaksOnHTMLBreaks {get; set;}
+    global Boolean showAllPermissions {
+        get{
+            return !getDataProvider().delegateLevelsPI.isEmpty() && !getDataProvider().delegateLevelsHCP.isEmpty();
+        }
+    }
 
     private String bodyParamValue;
     global String bodyValue {
