REF - 482 , REF - 484, REF - 481

--- a/force-app/main/default/classes/MedicalRecordReviewRemote.cls
+++ b/force-app/main/default/classes/MedicalRecordReviewRemote.cls
@@ -92,11 +92,12 @@ public without sharing class MedicalRecordReviewRemote {
     }
     
     @AuraEnabled
-    public static String setMRRStatus(String peJSON, String status){
+    public static String setMRRStatus(String peJSON, String status, String surveyGizmoData){
         Savepoint sp = Database.setSavepoint();
         try{
             Participant_Enrollment__c participantEnrollment = (Participant_Enrollment__c)JSON.deserialize(peJSON, Participant_Enrollment__c.class);
             participantEnrollment.Medical_Record_Review_Status__c = status;
+            participantEnrollment.MRR_Survey_Results_URL__c = surveyGizmoData;
             participantEnrollment.Medical_Record_Review_Completed_by__c = CommunityService.getUserContact().Id;
             if(status == ParticipantEnrollmentService.MRR_STATUS_PASS){
                 participantEnrollment.Participant_Status__c = ParticipantEnrollmentService.PART_STATUS_PENDING_REFERRAL;
@@ -112,6 +113,10 @@ public without sharing class MedicalRecordReviewRemote {
         }
     }
 
+    @AuraEnabled
+    public static void updatePESurveyGizmoInfo(){
+
+    }
 
 
 }
