--- a/force-app/main/triggers-implementation/classes/IntegrationPatientReferralTriggerHandler.cls
+++ b/force-app/main/triggers-implementation/classes/IntegrationPatientReferralTriggerHandler.cls
@@ -122,6 +122,7 @@ public without sharing class IntegrationPatientReferralTriggerHandler {
                 if (ipr != null) {
                     if (sr.isSuccess()) {
                         ipr.Success__c = true;
+                        ipr.Participant_Enrollment__c = sr.getId();
                     } else {
                         ipr.Success__c = false;
                         ipr.Error_Message__C = 'Participant Enrollment Duplicate Error';
